--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,7 @@
 
     "autoload":{
     	"psr-4":{
-    		"": "vendor\\ytech\\php-classes\\src"
+    		"Ytech\\": "vendor\\ytech\\php-classes\\src"
     	}
     }
 }
